--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,12 +16,12 @@
 
 <body>
 	<header>
-		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 		<nav>
 			<ul>
-				<li>projets</li>
-				<li>contact</li>
-				<li>login</li>
+				<li><a class="page-active" href="./index.html">projets</a></li>
+				<li><a href="#contact">contact</a></li>
+				<li><a href="./assets/Pages/connexion.html">login</a></li>
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
 		</nav>
