Etape 2.2 : MAJ Accueil utilisateur connecté

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,8 +10,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
 		rel="stylesheet">
 	<meta name="description" content="">
+	<script src="https://kit.fontawesome.com/b611424e9b.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="./assets/script.js"></script>
+	<script src="./assets/script-user.js"></script>
 </head>
 
 <body>
@@ -21,7 +23,7 @@
 			<ul>
 				<li><a class="page-active" href="./index.html">projets</a></li>
 				<li><a href="#contact">contact</a></li>
-				<li><a href="./assets/Pages/connexion.html">login</a></li>
+				<li><a id="login" href="./assets/Pages/connexion.html">login</a></li>
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
 		</nav>
