--- a/FrontEnd/assets/Pages/connexion.html
+++ b/FrontEnd/assets/Pages/connexion.html
@@ -11,6 +11,7 @@
 		rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="../style.css">
+    <script src="../script-connexion.js"></script>
 </head>
 
 <body>
@@ -27,7 +28,7 @@
 	</header>
 	<main class="connexion">
         <h2>Log In</h2>
-<form>
+<form id="login-form">
     <label for="email">E-mail</label>
     <input type="email" id="email" required>
     <label for="password">Mot de passe</label>
