--- a/FrontEnd/assets/Pages/connexion.html
+++ b/FrontEnd/assets/Pages/connexion.html
@@ -11,7 +11,7 @@
 		rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="../style.css">
-    <script src="../script-connexion.js"></script>
+    <script src="../script/script-connexion.js"></script>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
     <input type="email" id="email" required>
     <label for="password">Mot de passe</label>
     <input type="password" id="password" required>
-    <button type="submit">Se connecter</button>
+    <button class="btn-type" type="submit">Se connecter</button>
 </form>
 <a href="#">Mot de passe oublié</a>
     </main>
