--- a/FrontEnd/assets/Pages/connexion.html
+++ b/FrontEnd/assets/Pages/connexion.html
@@ -31,8 +31,9 @@
 <form id="login-form">
     <label for="email">E-mail</label>
     <input type="email" id="email" required>
-    <label for="password">Mot de passe</label>
+	<label for="password">Mot de passe</label>
     <input type="password" id="password" required>
+	<p id="connexionError" class="error-message"></p>
     <button class="btn-type" type="submit">Se connecter</button>
 </form>
 <a href="#">Mot de passe oublié</a>
