--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,23 +13,10 @@
 	<script src="https://kit.fontawesome.com/b611424e9b.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="./assets/script/fonction-general.js"></script>
-	<script src="./assets/script/function-MAJ-user-accueil.js"></script>
-	<script src="./assets/script/script.js"></script>
-	<script src="./assets/script/localStorage.js"></script>
 	<script src="./assets/script/modal.js"></script>
 </head>
 
 <body>
-
-	<div id="myModal" class="modal">
-		<div class="modal-content">
-			<span class="close">&times;</span>
-			<h2>Galerie Photo</h2>
-			<ul class="edit-gallery"></ul>
-			<button class="btn-type">Ajouter une photo</button>
-			<a>Supprimer la galerie</a>
-		</div>
-	</div>
 
 	<header>
 		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
@@ -61,10 +48,7 @@
 		<section id="portfolio">
 			<h2>Mes Projets</h2>
 			<ul>
-				<li data-category-name="all" class="li-active">Tous</li>
-				<li data-category-name="Objets">Objets</li>
-				<li data-category-name="Appartements">Appartements</li>
-				<li data-category-name="Hotels & restaurants">Hôtels & restaurants</li>
+				<li data-category-id="0" class="li-active">Tous</li>
 			</ul>
 			<div class="gallery">
 			</div>
